# debate-organiser

./: .gitignore  README.md  docker-compose.yml
backend/: alembic.ini  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 49de4c00abda_add_wins_losses_to_club_memberships.py
backend/app/: main.py
backend/app/db/: database.py  seed.py
backend/app/models/: __init__.py  announcement.py  availability.py  calendar_event.py  club.py  club_settings.py  debate_format.py  invite_code.py  notification.py  school.py  session.py  session_note.py  speaker_score.py  team_message.py  template.py  topic.py  tournament.py  tournament_announcement.py  user.py
backend/app/routers/: ai.py  announcements.py  auth.py  availability.py  clubs.py  events.py  formats.py  invites.py  notes.py  notifications.py  schools.py  scores.py  sessions.py  settings.py  team_chat.py  templates.py  topics.py  users.py  ws_notifications.py
backend/app/schemas/: format.py  session.py  topic.py  user.py
backend/app/services/: auth.py  notifications.py  role_assignment.py
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.jsx  index.css  main.jsx
frontend/src/api/: client.js  index.js
frontend/src/context/: AuthContext.jsx  ClubContext.jsx  ToastContext.jsx
frontend/src/hooks/: useNotificationSocket.js
frontend/src/pages/: CalendarPage.jsx  ClubSelect.jsx  ClubSettings.jsx  Dashboard.jsx  ForgotPassword.jsx  Formats.jsx  Learn.jsx  Login.jsx  MemberProfile.jsx  Members.jsx  NewSession.jsx  (+15 more)
mcp-server/: .env.example  pyproject.toml  server.py
(+7 files in other folders)
