[project]
name = "debate-organiser-mcp"
version = "0.1.0"
description = "MCP server wrapping the Debate Organiser FastAPI backend"
requires-python = ">=3.11"
dependencies = [
    "mcp[cli]>=1.0.0",
    "httpx>=0.27.0",
    "python-dotenv>=1.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]

[project.scripts]
debate-mcp = "server:main"
